feat: LCEL chain

--- a/llm_study_1.ipynb
+++ b/llm_study_1.ipynb
@@ -2,25 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "libmagic is unavailable but assists in filetype detection. Please consider installing libmagic for better results.\n",
-      "/Users/haneullee/Documents/workspace/GPT-app/env/lib/python3.13/site-packages/langchain/chains/llm.py:369: UserWarning: The apply_and_parse method is deprecated, instead pass an output parser directly to LLMChain.\n",
-      "  warnings.warn(\n"
+      "libmagic is unavailable but assists in filetype detection. Please consider installing libmagic for better results.\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "\"Harry's house is number four, Privet Drive, where Mr. and Mrs. Dursley live with their son Dudley. The house is described as perfectly normal, and the Dursleys are proud of their normality. The house is in a suburban neighborhood, and Mr. Dursley works at a firm called Grunnings. Mrs. Dursley is thin and blonde, and Mr. Dursley is a big, beefy man with a large mustache. The Dursleys have a secret that they fear someone will discover.\""
+       "AIMessage(content=\"Harry's house is located at number four, Privet Drive. It is described as a normal, suburban home where Mr. and Mrs. Dursley live with their son Dudley. The house is part of a neighborhood where the Dursleys try to maintain a sense of normalcy and avoid anything strange or mysterious.\", additional_kwargs={}, response_metadata={'token_usage': {'completion_tokens': 65, 'prompt_tokens': 1752, 'total_tokens': 1817, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-3.5-turbo', 'system_fingerprint': None, 'finish_reason': 'stop', 'logprobs': None}, id='run-81074513-1fdc-4343-8316-4a85ae0eab80-0')"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -32,9 +30,12 @@
     "from langchain.embeddings import OpenAIEmbeddings, CacheBackedEmbeddings\n",
     "from langchain.vectorstores import FAISS\n",
     "from langchain.storage import LocalFileStore\n",
-    "from langchain.chains import RetrievalQA\n",
+    "from langchain.prompts import ChatPromptTemplate\n",
+    "from langchain.schema.runnable import RunnablePassthrough\n",
     "\n",
-    "llm = ChatOpenAI()\n",
+    "llm = ChatOpenAI(\n",
+    "    temperature=0.1,\n",
+    ")\n",
     "\n",
     "cache_dir = LocalFileStore(\"./.cache/\")\n",
     "\n",
@@ -53,12 +54,28 @@
     "\n",
     "vectorstore = FAISS.from_documents(docs, cached_embeddings)\n",
     "\n",
-    "chain = RetrievalQA.from_chain_type(\n",
-    "    llm=llm,\n",
-    "    chain_type=\"map_rerank\",\n",
-    "    retriever=vectorstore.as_retriever(),\n",
+    "retriver = vectorstore.as_retriever()\n",
+    "\n",
+    "prompt = ChatPromptTemplate.from_messages(\n",
+    "    [\n",
+    "        (\n",
+    "            \"system\",\n",
+    "            \"You are a helpful assistant. Answer questions using only the following context. If you don't know the answer just say you don't know, don't make it up:\\n\\n{context}\",\n",
+    "        ),\n",
+    "        (\"human\", \"{question}\"),\n",
+    "    ]\n",
     ")\n",
-    "chain.run(\"Describe Harry's house.\")"
+    "\n",
+    "chain = (\n",
+    "    {\n",
+    "        \"context\": retriver,\n",
+    "        \"question\": RunnablePassthrough(),\n",
+    "    }\n",
+    "    | prompt\n",
+    "    | llm\n",
+    ")\n",
+    "\n",
+    "chain.invoke(\"Describe Harry's house.\")"
    ]
   }
  ],
