feat: Map reduce LCEL chain

--- a/llm_study_1.ipynb
+++ b/llm_study_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -15,10 +15,10 @@
     {
      "data": {
       "text/plain": [
-       "AIMessage(content=\"Harry's house is located at number four, Privet Drive. It is described as a normal, suburban home where Mr. and Mrs. Dursley live with their son Dudley. The house is part of a neighborhood where the Dursleys try to maintain a sense of normalcy and avoid anything strange or mysterious.\", additional_kwargs={}, response_metadata={'token_usage': {'completion_tokens': 65, 'prompt_tokens': 1752, 'total_tokens': 1817, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-3.5-turbo', 'system_fingerprint': None, 'finish_reason': 'stop', 'logprobs': None}, id='run-81074513-1fdc-4343-8316-4a85ae0eab80-0')"
+       "AIMessage(content='Harry Potter lives at number four, Privet Drive in Little Whinging, Surrey.', additional_kwargs={}, response_metadata={'token_usage': {'completion_tokens': 18, 'prompt_tokens': 136, 'total_tokens': 154, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-3.5-turbo', 'system_fingerprint': None, 'finish_reason': 'stop', 'logprobs': None}, id='run-d2e519c4-0331-4e1e-a6d0-4d163391795e-0')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -31,7 +31,7 @@
     "from langchain.vectorstores import FAISS\n",
     "from langchain.storage import LocalFileStore\n",
     "from langchain.prompts import ChatPromptTemplate\n",
-    "from langchain.schema.runnable import RunnablePassthrough\n",
+    "from langchain.schema.runnable import RunnablePassthrough, RunnableLambda\n",
     "\n",
     "llm = ChatOpenAI(\n",
     "    temperature=0.1,\n",
@@ -54,28 +54,60 @@
     "\n",
     "vectorstore = FAISS.from_documents(docs, cached_embeddings)\n",
     "\n",
-    "retriver = vectorstore.as_retriever()\n",
+    "retriever = vectorstore.as_retriever()\n",
     "\n",
-    "prompt = ChatPromptTemplate.from_messages(\n",
+    "\n",
+    "map_doc_prompt = ChatPromptTemplate.from_messages(\n",
     "    [\n",
     "        (\n",
     "            \"system\",\n",
-    "            \"You are a helpful assistant. Answer questions using only the following context. If you don't know the answer just say you don't know, don't make it up:\\n\\n{context}\",\n",
+    "            \"\"\"\n",
+    "            Use the following portion of a long document to see if any of the text is relevant to answer the question. Return any relevant text verbatim. If there is no relevant text, return : ''\n",
+    "            -------\n",
+    "            {context}\n",
+    "            \"\"\",\n",
     "        ),\n",
     "        (\"human\", \"{question}\"),\n",
     "    ]\n",
     ")\n",
     "\n",
-    "chain = (\n",
-    "    {\n",
-    "        \"context\": retriver,\n",
-    "        \"question\": RunnablePassthrough(),\n",
-    "    }\n",
-    "    | prompt\n",
-    "    | llm\n",
+    "map_doc_chain = map_doc_prompt | llm\n",
+    "\n",
+    "\n",
+    "def map_docs(inputs):\n",
+    "    documents = inputs[\"documents\"]\n",
+    "    question = inputs[\"question\"]\n",
+    "    return \"\\n\\n\".join(\n",
+    "        map_doc_chain.invoke(\n",
+    "            {\"context\": doc.page_content, \"question\": question}\n",
+    "        ).content\n",
+    "        for doc in documents\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "map_chain = {\n",
+    "    \"documents\": retriever,\n",
+    "    \"question\": RunnablePassthrough(),\n",
+    "} | RunnableLambda(map_docs)\n",
+    "\n",
+    "final_prompt = ChatPromptTemplate.from_messages(\n",
+    "    [\n",
+    "        (\n",
+    "            \"system\",\n",
+    "            \"\"\"\n",
+    "            Given the following extracted parts of a long document and a question, create a final answer. \n",
+    "            If you don't know the answer, just say that you don't know. Don't try to make up an answer.\n",
+    "            ------\n",
+    "            {context}\n",
+    "            \"\"\",\n",
+    "        ),\n",
+    "        (\"human\", \"{question}\"),\n",
+    "    ]\n",
     ")\n",
     "\n",
-    "chain.invoke(\"Describe Harry's house.\")"
+    "chain = {\"context\": map_chain, \"question\": RunnablePassthrough()} | final_prompt | llm\n",
+    "\n",
+    "chain.invoke(\"Describe where Harry Potter lives.\")"
    ]
   }
  ],
