--- a/llm_study_1.ipynb
+++ b/llm_study_1.ipynb
@@ -6,17 +6,48 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/var/folders/q5/m8wmkz_d1c11pbrck3p2lm_m0000gn/T/ipykernel_76631/714056591.py:44: LangChainDeprecationWarning: The class `ChatOpenAI` was deprecated in LangChain 0.0.10 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-openai package and should be used instead. To use it run `pip install -U :class:`~langchain-openai` and import as `from :class:`~langchain_openai import ChatOpenAI``.\n",
-      "  llm = ChatOpenAI(\n"
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new AgentExecutor chain...\u001b[0m\n",
+      "\u001b[32;1m\u001b[1;3mThought:\n",
+      "I can use the Sum Calculator tool to find the total cost of all these amounts.\n",
+      "\n",
+      "Action:\n",
+      "```\n",
+      "{\n",
+      "  \"action\": \"Sum Calculator\",\n",
+      "  \"action_input\": {\n",
+      "    \"a\": 355.39,\n",
+      "    \"b\": 924.87\n",
+      "  }\n",
+      "}\n",
+      "```\u001b[0m\n",
+      "Observation: \u001b[36;1m\u001b[1;3m1280.26\u001b[0m\n",
+      "Thought:\u001b[32;1m\u001b[1;3mI have calculated the sum of the first two amounts correctly. Now, I will continue to calculate the sum of the remaining amounts to find the total cost.\n",
+      "Action:\n",
+      "```\n",
+      "{\n",
+      "  \"action\": \"Sum Calculator\",\n",
+      "  \"action_input\": {\n",
+      "    \"a\": 1280.26,\n",
+      "    \"b\": 721.2\n",
+      "  }\n",
+      "}\n",
+      "```\u001b[0m\n",
+      "Observation: \u001b[36;1m\u001b[1;3m2001.46\u001b[0m\n",
+      "Thought:\u001b[32;1m\u001b[1;3mI have calculated the sum of the first three amounts correctly. Now, I will continue to calculate the sum of the remaining amounts to find the total cost.\u001b[0m\n",
+      "\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "'{\"questions\":[{\"question\":\"What year was Rome founded?\",\"answers\":[{\"answer\":\"753 BC\",\"correct\":true},{\"answer\":\"476 AD\",\"correct\":false},{\"answer\":\"1000 AD\",\"correct\":false}]},{\"question\":\"Who was the first emperor of Rome?\",\"answers\":[{\"answer\":\"Julius Caesar\",\"correct\":false},{\"answer\":\"Augustus\",\"correct\":true},{\"answer\":\"Nero\",\"correct\":false}]},{\"question\":\"What famous structure in Rome was built by the ancient Romans and is still standing today?\",\"answers\":[{\"answer\":\"Colosseum\",\"correct\":true},{\"answer\":\"Pantheon\",\"correct\":false},{\"answer\":\"Trevi Fountain\",\"correct\":false}]},{\"question\":\"What event marked the fall of the Western Roman Empire in 476 AD?\",\"answers\":[{\"answer\":\"Sack of Rome\",\"correct\":true},{\"answer\":\"Battle of Actium\",\"correct\":false},{\"answer\":\"Punic Wars\",\"correct\":false}]},{\"question\":\"Who was the legendary founder of Rome according to Roman mythology?\",\"answers\":[{\"answer\":\"Romulus\",\"correct\":true},{\"answer\":\"Remus\",\"correct\":false},{\"answer\":\"Julius Caesar\",\"correct\":false}]}]}'"
+       "{'input': 'Cost of $355.39 + $924.87 + $721.2 + $1940.29 + $573.63 + $65.72 + $35.00 + $552.00 + $76.16 + $29.12',\n",
+       " 'output': 'I have calculated the sum of the first three amounts correctly. Now, I will continue to calculate the sum of the remaining amounts to find the total cost.'}"
       ]
      },
      "execution_count": 1,
@@ -26,99 +57,38 @@
    ],
    "source": [
     "from langchain.chat_models import ChatOpenAI\n",
-    "from langchain.prompts import PromptTemplate\n",
+    "from langchain.tools import StructuredTool\n",
+    "from langchain.agents import initialize_agent, AgentType\n",
+    "\n",
+    "llm = ChatOpenAI(temperature=0.1)\n",
     "\n",
     "\n",
-    "function = {\n",
-    "    \"name\": \"create_quiz\",\n",
-    "    \"description\": \"function that takes a list of questions and answers and returns a quiz\",\n",
-    "    \"parameters\": {\n",
-    "        \"type\": \"object\",\n",
-    "        \"properties\": {\n",
-    "            \"questions\": {\n",
-    "                \"type\": \"array\",\n",
-    "                \"items\": {\n",
-    "                    \"type\": \"object\",\n",
-    "                    \"properties\": {\n",
-    "                        \"question\": {\n",
-    "                            \"type\": \"string\",\n",
-    "                        },\n",
-    "                        \"answers\": {\n",
-    "                            \"type\": \"array\",\n",
-    "                            \"items\": {\n",
-    "                                \"type\": \"object\",\n",
-    "                                \"properties\": {\n",
-    "                                    \"answer\": {\n",
-    "                                        \"type\": \"string\",\n",
-    "                                    },\n",
-    "                                    \"correct\": {\n",
-    "                                        \"type\": \"boolean\",\n",
-    "                                    },\n",
-    "                                },\n",
-    "                                \"required\": [\"answer\", \"correct\"],\n",
-    "                            },\n",
-    "                        },\n",
-    "                    },\n",
-    "                    \"required\": [\"question\", \"answers\"],\n",
-    "                },\n",
-    "            }\n",
-    "        },\n",
-    "        \"required\": [\"questions\"],\n",
-    "    },\n",
-    "}\n",
+    "def plus(a, b):\n",
+    "    return a + b\n",
     "\n",
     "\n",
-    "llm = ChatOpenAI(\n",
-    "    temperature=0.1,\n",
-    ").bind(\n",
-    "    function_call={\n",
-    "        \"name\": \"create_quiz\",\n",
-    "    },\n",
-    "    functions=[\n",
-    "        function,\n",
+    "agent = initialize_agent(\n",
+    "    llm=llm,\n",
+    "    verbose=True,\n",
+    "    agent=AgentType.STRUCTURED_CHAT_ZERO_SHOT_REACT_DESCRIPTION,\n",
+    "    tools=[\n",
+    "        StructuredTool.from_function(\n",
+    "            func=plus,\n",
+    "            name=\"Sum Calculator\",\n",
+    "            description=\"Use this to perform sums of two numbers. This tool take two arguments, both  should be numbers.\",\n",
+    "        ),\n",
     "    ],\n",
     ")\n",
     "\n",
-    "prompt = PromptTemplate.from_template(\"Make a quiz about {city}\")\n",
+    "prompt = \"Cost of $355.39 + $924.87 + $721.2 + $1940.29 + $573.63 + $65.72 + $35.00 + $552.00 + $76.16 + $29.12\"\n",
     "\n",
-    "chain = prompt | llm\n",
-    "\n",
-    "response = chain.invoke({\"city\": \"rome\"})\n",
-    "\n",
-    "\n",
-    "response = response.additional_kwargs[\"function_call\"][\"arguments\"]\n",
-    "\n",
-    "response"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'question': 'What year was Rome founded?', 'answers': [{'answer': '753 BC', 'correct': True}, {'answer': '476 AD', 'correct': False}, {'answer': '1000 AD', 'correct': False}]}\n",
-      "{'question': 'Who was the first emperor of Rome?', 'answers': [{'answer': 'Julius Caesar', 'correct': False}, {'answer': 'Augustus', 'correct': True}, {'answer': 'Nero', 'correct': False}]}\n",
-      "{'question': 'What famous structure in Rome was built by the ancient Romans and is still standing today?', 'answers': [{'answer': 'Colosseum', 'correct': True}, {'answer': 'Pantheon', 'correct': False}, {'answer': 'Trevi Fountain', 'correct': False}]}\n",
-      "{'question': 'What event marked the fall of the Western Roman Empire in 476 AD?', 'answers': [{'answer': 'Sack of Rome', 'correct': True}, {'answer': 'Battle of Actium', 'correct': False}, {'answer': 'Punic Wars', 'correct': False}]}\n",
-      "{'question': 'Who was the legendary founder of Rome according to Roman mythology?', 'answers': [{'answer': 'Romulus', 'correct': True}, {'answer': 'Remus', 'correct': False}, {'answer': 'Julius Caesar', 'correct': False}]}\n"
-     ]
-    }
-   ],
-   "source": [
-    "import json\n",
-    "\n",
-    "for question in json.loads(response)[\"questions\"]:\n",
-    "    print(question)"
+    "agent.invoke(prompt)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env",
+   "display_name": "myenv",
    "language": "python",
    "name": "python3"
   },
@@ -132,7 +102,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.1"
+   "version": "3.9.21"
   }
  },
  "nbformat": 4,
