feat: zero-shot react agent

--- a/llm_study_1.ipynb
+++ b/llm_study_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -12,8 +12,7 @@
       "\n",
       "\n",
       "\u001b[1m> Entering new AgentExecutor chain...\u001b[0m\n",
-      "\u001b[32;1m\u001b[1;3mThought:\n",
-      "I can use the Sum Calculator tool to find the total cost of all these amounts.\n",
+      "\u001b[32;1m\u001b[1;3mThought: I can use the Sum Calculator tool to find the total cost of all these amounts.\n",
       "\n",
       "Action:\n",
       "```\n",
@@ -26,7 +25,7 @@
       "}\n",
       "```\u001b[0m\n",
       "Observation: \u001b[36;1m\u001b[1;3m1280.26\u001b[0m\n",
-      "Thought:\u001b[32;1m\u001b[1;3mI have calculated the sum of the first two amounts correctly. Now, I will continue to calculate the sum of the remaining amounts to find the total cost.\n",
+      "Thought:\u001b[32;1m\u001b[1;3mI will continue to calculate the sum of the remaining amounts.\n",
       "Action:\n",
       "```\n",
       "{\n",
@@ -38,7 +37,105 @@
       "}\n",
       "```\u001b[0m\n",
       "Observation: \u001b[36;1m\u001b[1;3m2001.46\u001b[0m\n",
-      "Thought:\u001b[32;1m\u001b[1;3mI have calculated the sum of the first three amounts correctly. Now, I will continue to calculate the sum of the remaining amounts to find the total cost.\u001b[0m\n",
+      "Thought:\u001b[32;1m\u001b[1;3mI will continue summing the remaining amounts to find the total cost.\n",
+      "Action:\n",
+      "```\n",
+      "{\n",
+      "  \"action\": \"Sum Calculator\",\n",
+      "  \"action_input\": {\n",
+      "    \"a\": 2001.46,\n",
+      "    \"b\": 1940.29\n",
+      "  }\n",
+      "}\n",
+      "```\u001b[0m\n",
+      "Observation: \u001b[36;1m\u001b[1;3m3941.75\u001b[0m\n",
+      "Thought:\u001b[32;1m\u001b[1;3mI will continue summing the remaining amounts to find the total cost.\n",
+      "\n",
+      "Action:\n",
+      "```\n",
+      "{\n",
+      "  \"action\": \"Sum Calculator\",\n",
+      "  \"action_input\": {\n",
+      "    \"a\": 3941.75,\n",
+      "    \"b\": 573.63\n",
+      "  }\n",
+      "}\n",
+      "```\u001b[0m\n",
+      "Observation: \u001b[36;1m\u001b[1;3m4515.38\u001b[0m\n",
+      "Thought:\u001b[32;1m\u001b[1;3mI will continue summing the remaining amounts to find the total cost.\n",
+      "\n",
+      "Action:\n",
+      "```\n",
+      "{\n",
+      "  \"action\": \"Sum Calculator\",\n",
+      "  \"action_input\": {\n",
+      "    \"a\": 4515.38,\n",
+      "    \"b\": 65.72\n",
+      "  }\n",
+      "}\n",
+      "```\u001b[0m\n",
+      "Observation: \u001b[36;1m\u001b[1;3m4581.1\u001b[0m\n",
+      "Thought:\u001b[32;1m\u001b[1;3mI will continue summing the remaining amounts to find the total cost.\n",
+      "\n",
+      "Action:\n",
+      "```\n",
+      "{\n",
+      "  \"action\": \"Sum Calculator\",\n",
+      "  \"action_input\": {\n",
+      "    \"a\": 4581.1,\n",
+      "    \"b\": 35.00\n",
+      "  }\n",
+      "}\n",
+      "```\u001b[0m\n",
+      "Observation: \u001b[36;1m\u001b[1;3m4616.1\u001b[0m\n",
+      "Thought:\u001b[32;1m\u001b[1;3mI will continue summing the remaining amounts to find the total cost.\n",
+      "\n",
+      "Action:\n",
+      "```\n",
+      "{\n",
+      "  \"action\": \"Sum Calculator\",\n",
+      "  \"action_input\": {\n",
+      "    \"a\": 4616.1,\n",
+      "    \"b\": 552.00\n",
+      "  }\n",
+      "}\n",
+      "```\u001b[0m\n",
+      "Observation: \u001b[36;1m\u001b[1;3m5168.1\u001b[0m\n",
+      "Thought:\u001b[32;1m\u001b[1;3mI will continue summing the remaining amounts to find the total cost.\n",
+      "\n",
+      "Action:\n",
+      "```\n",
+      "{\n",
+      "  \"action\": \"Sum Calculator\",\n",
+      "  \"action_input\": {\n",
+      "    \"a\": 5168.1,\n",
+      "    \"b\": 76.16\n",
+      "  }\n",
+      "}\n",
+      "```\u001b[0m\n",
+      "Observation: \u001b[36;1m\u001b[1;3m5244.26\u001b[0m\n",
+      "Thought:\u001b[32;1m\u001b[1;3mI will calculate the sum of the last two amounts to find the total cost. \n",
+      "\n",
+      "Action:\n",
+      "```\n",
+      "{\n",
+      "  \"action\": \"Sum Calculator\",\n",
+      "  \"action_input\": {\n",
+      "    \"a\": 5244.26,\n",
+      "    \"b\": 29.12\n",
+      "  }\n",
+      "}\n",
+      "```\u001b[0m\n",
+      "Observation: \u001b[36;1m\u001b[1;3m5273.38\u001b[0m\n",
+      "Thought:\u001b[32;1m\u001b[1;3mI have calculated the total cost of all the amounts provided. The sum is $5273.38.\n",
+      "\n",
+      "Action:\n",
+      "```\n",
+      "{\n",
+      "  \"action\": \"Final Answer\",\n",
+      "  \"action_input\": \"The total cost is $5273.38\"\n",
+      "}\n",
+      "```\u001b[0m\n",
       "\n",
       "\u001b[1m> Finished chain.\u001b[0m\n"
      ]
@@ -47,10 +144,10 @@
      "data": {
       "text/plain": [
        "{'input': 'Cost of $355.39 + $924.87 + $721.2 + $1940.29 + $573.63 + $65.72 + $35.00 + $552.00 + $76.16 + $29.12',\n",
-       " 'output': 'I have calculated the sum of the first three amounts correctly. Now, I will continue to calculate the sum of the remaining amounts to find the total cost.'}"
+       " 'output': 'The total cost is $5273.38'}"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
