--- a/llm_study_1.ipynb
+++ b/llm_study_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -153,27 +153,40 @@
     }
    ],
    "source": [
+    "from typing import Any, Type\n",
     "from langchain.chat_models import ChatOpenAI\n",
-    "from langchain.tools import StructuredTool\n",
+    "from langchain.tools import BaseTool\n",
+    "from pydantic import BaseModel, Field\n",
     "from langchain.agents import initialize_agent, AgentType\n",
     "\n",
     "llm = ChatOpenAI(temperature=0.1)\n",
     "\n",
     "\n",
-    "def plus(a, b):\n",
-    "    return a + b\n",
+    "class CalculatorToolArgsSchema(BaseModel):\n",
+    "    a: float = Field(description=\"The first number\")\n",
+    "    b: float = Field(description=\"The second number\")\n",
+    "\n",
+    "\n",
+    "class CalculatorTool(BaseTool):\n",
+    "    name = \"CalculatorTool\"\n",
+    "    description = \"\"\"\n",
+    "    Use this to perform sums of two numbers.\n",
+    "    The first and second arguments should be numbers.\n",
+    "    Only receives two arguments.\n",
+    "    \"\"\"\n",
+    "    args_schema: Type[CalculatorToolArgsSchema] = CalculatorToolArgsSchema\n",
+    "\n",
+    "    def _run(self, a, b):\n",
+    "        return a + b\n",
     "\n",
     "\n",
     "agent = initialize_agent(\n",
     "    llm=llm,\n",
     "    verbose=True,\n",
-    "    agent=AgentType.STRUCTURED_CHAT_ZERO_SHOT_REACT_DESCRIPTION,\n",
+    "    agent=AgentType.OPENAI_FUNCTIONS,\n",
+    "    handle_parsing_errors=True,\n",
     "    tools=[\n",
-    "        StructuredTool.from_function(\n",
-    "            func=plus,\n",
-    "            name=\"Sum Calculator\",\n",
-    "            description=\"Use this to perform sums of two numbers. This tool take two arguments, both  should be numbers.\",\n",
-    "        ),\n",
+    "        CalculatorTool(),\n",
     "    ],\n",
     ")\n",
     "\n",
