--- a/llm_study_1.ipynb
+++ b/llm_study_1.ipynb
@@ -12,130 +12,43 @@
       "\n",
       "\n",
       "\u001b[1m> Entering new AgentExecutor chain...\u001b[0m\n",
-      "\u001b[32;1m\u001b[1;3mThought: I can use the Sum Calculator tool to find the total cost of all these amounts.\n",
+      "\u001b[32;1m\u001b[1;3m\n",
+      "Invoking: `CalculatorTool` with `{'a': 355.39, 'b': 924.87}`\n",
       "\n",
-      "Action:\n",
-      "```\n",
-      "{\n",
-      "  \"action\": \"Sum Calculator\",\n",
-      "  \"action_input\": {\n",
-      "    \"a\": 355.39,\n",
-      "    \"b\": 924.87\n",
-      "  }\n",
-      "}\n",
-      "```\u001b[0m\n",
-      "Observation: \u001b[36;1m\u001b[1;3m1280.26\u001b[0m\n",
-      "Thought:\u001b[32;1m\u001b[1;3mI will continue to calculate the sum of the remaining amounts.\n",
-      "Action:\n",
-      "```\n",
-      "{\n",
-      "  \"action\": \"Sum Calculator\",\n",
-      "  \"action_input\": {\n",
-      "    \"a\": 1280.26,\n",
-      "    \"b\": 721.2\n",
-      "  }\n",
-      "}\n",
-      "```\u001b[0m\n",
-      "Observation: \u001b[36;1m\u001b[1;3m2001.46\u001b[0m\n",
-      "Thought:\u001b[32;1m\u001b[1;3mI will continue summing the remaining amounts to find the total cost.\n",
-      "Action:\n",
-      "```\n",
-      "{\n",
-      "  \"action\": \"Sum Calculator\",\n",
-      "  \"action_input\": {\n",
-      "    \"a\": 2001.46,\n",
-      "    \"b\": 1940.29\n",
-      "  }\n",
-      "}\n",
-      "```\u001b[0m\n",
-      "Observation: \u001b[36;1m\u001b[1;3m3941.75\u001b[0m\n",
-      "Thought:\u001b[32;1m\u001b[1;3mI will continue summing the remaining amounts to find the total cost.\n",
       "\n",
-      "Action:\n",
-      "```\n",
-      "{\n",
-      "  \"action\": \"Sum Calculator\",\n",
-      "  \"action_input\": {\n",
-      "    \"a\": 3941.75,\n",
-      "    \"b\": 573.63\n",
-      "  }\n",
-      "}\n",
-      "```\u001b[0m\n",
-      "Observation: \u001b[36;1m\u001b[1;3m4515.38\u001b[0m\n",
-      "Thought:\u001b[32;1m\u001b[1;3mI will continue summing the remaining amounts to find the total cost.\n",
+      "\u001b[0m\u001b[36;1m\u001b[1;3m1280.26\u001b[0m\u001b[32;1m\u001b[1;3m\n",
+      "Invoking: `CalculatorTool` with `{'a': 1280.26, 'b': 721.2}`\n",
       "\n",
-      "Action:\n",
-      "```\n",
-      "{\n",
-      "  \"action\": \"Sum Calculator\",\n",
-      "  \"action_input\": {\n",
-      "    \"a\": 4515.38,\n",
-      "    \"b\": 65.72\n",
-      "  }\n",
-      "}\n",
-      "```\u001b[0m\n",
-      "Observation: \u001b[36;1m\u001b[1;3m4581.1\u001b[0m\n",
-      "Thought:\u001b[32;1m\u001b[1;3mI will continue summing the remaining amounts to find the total cost.\n",
       "\n",
-      "Action:\n",
-      "```\n",
-      "{\n",
-      "  \"action\": \"Sum Calculator\",\n",
-      "  \"action_input\": {\n",
-      "    \"a\": 4581.1,\n",
-      "    \"b\": 35.00\n",
-      "  }\n",
-      "}\n",
-      "```\u001b[0m\n",
-      "Observation: \u001b[36;1m\u001b[1;3m4616.1\u001b[0m\n",
-      "Thought:\u001b[32;1m\u001b[1;3mI will continue summing the remaining amounts to find the total cost.\n",
+      "\u001b[0m\u001b[36;1m\u001b[1;3m2001.46\u001b[0m\u001b[32;1m\u001b[1;3m\n",
+      "Invoking: `CalculatorTool` with `{'a': 2001.46, 'b': 1940.29}`\n",
       "\n",
-      "Action:\n",
-      "```\n",
-      "{\n",
-      "  \"action\": \"Sum Calculator\",\n",
-      "  \"action_input\": {\n",
-      "    \"a\": 4616.1,\n",
-      "    \"b\": 552.00\n",
-      "  }\n",
-      "}\n",
-      "```\u001b[0m\n",
-      "Observation: \u001b[36;1m\u001b[1;3m5168.1\u001b[0m\n",
-      "Thought:\u001b[32;1m\u001b[1;3mI will continue summing the remaining amounts to find the total cost.\n",
       "\n",
-      "Action:\n",
-      "```\n",
-      "{\n",
-      "  \"action\": \"Sum Calculator\",\n",
-      "  \"action_input\": {\n",
-      "    \"a\": 5168.1,\n",
-      "    \"b\": 76.16\n",
-      "  }\n",
-      "}\n",
-      "```\u001b[0m\n",
-      "Observation: \u001b[36;1m\u001b[1;3m5244.26\u001b[0m\n",
-      "Thought:\u001b[32;1m\u001b[1;3mI will calculate the sum of the last two amounts to find the total cost. \n",
+      "\u001b[0m\u001b[36;1m\u001b[1;3m3941.75\u001b[0m\u001b[32;1m\u001b[1;3m\n",
+      "Invoking: `CalculatorTool` with `{'a': 3941.75, 'b': 573.63}`\n",
       "\n",
-      "Action:\n",
-      "```\n",
-      "{\n",
-      "  \"action\": \"Sum Calculator\",\n",
-      "  \"action_input\": {\n",
-      "    \"a\": 5244.26,\n",
-      "    \"b\": 29.12\n",
-      "  }\n",
-      "}\n",
-      "```\u001b[0m\n",
-      "Observation: \u001b[36;1m\u001b[1;3m5273.38\u001b[0m\n",
-      "Thought:\u001b[32;1m\u001b[1;3mI have calculated the total cost of all the amounts provided. The sum is $5273.38.\n",
       "\n",
-      "Action:\n",
-      "```\n",
-      "{\n",
-      "  \"action\": \"Final Answer\",\n",
-      "  \"action_input\": \"The total cost is $5273.38\"\n",
-      "}\n",
-      "```\u001b[0m\n",
+      "\u001b[0m\u001b[36;1m\u001b[1;3m4515.38\u001b[0m\u001b[32;1m\u001b[1;3m\n",
+      "Invoking: `CalculatorTool` with `{'a': 4515.38, 'b': 65.72}`\n",
+      "\n",
+      "\n",
+      "\u001b[0m\u001b[36;1m\u001b[1;3m4581.1\u001b[0m\u001b[32;1m\u001b[1;3m\n",
+      "Invoking: `CalculatorTool` with `{'a': 4581.1, 'b': 35.0}`\n",
+      "\n",
+      "\n",
+      "\u001b[0m\u001b[36;1m\u001b[1;3m4616.1\u001b[0m\u001b[32;1m\u001b[1;3m\n",
+      "Invoking: `CalculatorTool` with `{'a': 4616.1, 'b': 552.0}`\n",
+      "\n",
+      "\n",
+      "\u001b[0m\u001b[36;1m\u001b[1;3m5168.1\u001b[0m\u001b[32;1m\u001b[1;3m\n",
+      "Invoking: `CalculatorTool` with `{'a': 5168.1, 'b': 76.16}`\n",
+      "\n",
+      "\n",
+      "\u001b[0m\u001b[36;1m\u001b[1;3m5244.26\u001b[0m\u001b[32;1m\u001b[1;3m\n",
+      "Invoking: `CalculatorTool` with `{'a': 5244.26, 'b': 29.12}`\n",
+      "\n",
+      "\n",
+      "\u001b[0m\u001b[36;1m\u001b[1;3m5273.38\u001b[0m\u001b[32;1m\u001b[1;3mThe total cost of $355.39 + $924.87 + $721.2 + $1940.29 + $573.63 + $65.72 + $35.00 + $552.00 + $76.16 + $29.12 is $5273.38.\u001b[0m\n",
       "\n",
       "\u001b[1m> Finished chain.\u001b[0m\n"
      ]
@@ -144,10 +57,10 @@
      "data": {
       "text/plain": [
        "{'input': 'Cost of $355.39 + $924.87 + $721.2 + $1940.29 + $573.63 + $65.72 + $35.00 + $552.00 + $76.16 + $29.12',\n",
-       " 'output': 'The total cost is $5273.38'}"
+       " 'output': 'The total cost of $355.39 + $924.87 + $721.2 + $1940.29 + $573.63 + $65.72 + $35.00 + $552.00 + $76.16 + $29.12 is $5273.38.'}"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,26 +71,31 @@
     "from langchain.tools import BaseTool\n",
     "from pydantic import BaseModel, Field\n",
     "from langchain.agents import initialize_agent, AgentType\n",
+    "from langchain.utilities import DuckDuckGoSearchAPIWrapper\n",
     "\n",
     "llm = ChatOpenAI(temperature=0.1)\n",
     "\n",
     "\n",
-    "class CalculatorToolArgsSchema(BaseModel):\n",
-    "    a: float = Field(description=\"The first number\")\n",
-    "    b: float = Field(description=\"The second number\")\n",
+    "class StockMarketSymbolSearchToolArgsSchema(BaseModel):\n",
+    "    query: str = Field(\n",
+    "        description=\"The query you will search for.Example query: Stock Market Symbol for Apple Company\"\n",
+    "    )\n",
     "\n",
     "\n",
-    "class CalculatorTool(BaseTool):\n",
-    "    name = \"CalculatorTool\"\n",
+    "class StockMarketSymbolSearchTool(BaseTool):\n",
+    "    name = \"StockMarketSymbolSearchTool\"\n",
     "    description = \"\"\"\n",
-    "    Use this to perform sums of two numbers.\n",
-    "    The first and second arguments should be numbers.\n",
-    "    Only receives two arguments.\n",
+    "    Use this tool to find the stock market symbol for a company.\n",
+    "    It takes a query as an argument.\n",
+    "    \n",
     "    \"\"\"\n",
-    "    args_schema: Type[CalculatorToolArgsSchema] = CalculatorToolArgsSchema\n",
+    "    args_schema: Type[\n",
+    "        StockMarketSymbolSearchToolArgsSchema\n",
+    "    ] = StockMarketSymbolSearchToolArgsSchema\n",
     "\n",
-    "    def _run(self, a, b):\n",
-    "        return a + b\n",
+    "    def _run(self, query):\n",
+    "        ddg = DuckDuckGoSearchAPIWrapper()\n",
+    "        return ddg.run(query)\n",
     "\n",
     "\n",
     "agent = initialize_agent(\n",
@@ -186,11 +104,11 @@
     "    agent=AgentType.OPENAI_FUNCTIONS,\n",
     "    handle_parsing_errors=True,\n",
     "    tools=[\n",
-    "        CalculatorTool(),\n",
+    "        StockMarketSymbolSearchTool(),\n",
     "    ],\n",
     ")\n",
     "\n",
-    "prompt = \"Cost of $355.39 + $924.87 + $721.2 + $1940.29 + $573.63 + $65.72 + $35.00 + $552.00 + $76.16 + $29.12\"\n",
+    "prompt = \"Give me information on Cloudflare's stock and help me analyze if it's a potential good investment. Also tell me what symbol does the stock have.\"\n",
     "\n",
     "agent.invoke(prompt)"
    ]
