feat: create assistant

--- a/llm_study_1.ipynb
+++ b/llm_study_1.ipynb
@@ -4,6 +4,93 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.utilities.duckduckgo_search import DuckDuckGoSearchAPIWrapper\n",
+    "\n",
+    "\n",
+    "def get_ticker(inputs):\n",
+    "    ddg = DuckDuckGoSearchAPIWrapper()\n",
+    "    company_name = inputs[\"company_name\"]\n",
+    "    return ddg.run(f\"Ticker symbol of {company_name}\")\n",
+    "\n",
+    "\n",
+    "functions = [\n",
+    "    {\n",
+    "        \"type\": \"function\",\n",
+    "        \"function\": {\n",
+    "            \"name\": \"get_ticker\",\n",
+    "            \"description\": \"Given the name of a company returns its ticker symbol\",\n",
+    "            \"parameters\": {\n",
+    "                \"type\": \"object\",\n",
+    "                \"properties\": {\n",
+    "                    \"company_name\": {\n",
+    "                        \"type\": \"string\",\n",
+    "                        \"description\": \"The name of the company\",\n",
+    "                    }\n",
+    "                },\n",
+    "                \"required\": [\"company_name\"],\n",
+    "            },\n",
+    "        },\n",
+    "    },\n",
+    "    {\n",
+    "        \"type\": \"function\",\n",
+    "        \"function\": {\n",
+    "            \"name\": \"get_income_statement\",\n",
+    "            \"description\": \"Given a ticker symbol (i.e AAPL) returns the company's income statement.\",\n",
+    "            \"parameters\": {\n",
+    "                \"type\": \"object\",\n",
+    "                \"properties\": {\n",
+    "                    \"ticker\": {\n",
+    "                        \"type\": \"string\",\n",
+    "                        \"description\": \"Ticker symbol of the company\",\n",
+    "                    },\n",
+    "                },\n",
+    "                \"required\": [\"ticker\"],\n",
+    "            },\n",
+    "        },\n",
+    "    },\n",
+    "    {\n",
+    "        \"type\": \"function\",\n",
+    "        \"function\": {\n",
+    "            \"name\": \"get_balance_sheet\",\n",
+    "            \"description\": \"Given a ticker symbol (i.e AAPL) returns the company's balance sheet.\",\n",
+    "            \"parameters\": {\n",
+    "                \"type\": \"object\",\n",
+    "                \"properties\": {\n",
+    "                    \"ticker\": {\n",
+    "                        \"type\": \"string\",\n",
+    "                        \"description\": \"Ticker symbol of the company\",\n",
+    "                    },\n",
+    "                },\n",
+    "                \"required\": [\"ticker\"],\n",
+    "            },\n",
+    "        },\n",
+    "    },\n",
+    "    {\n",
+    "        \"type\": \"function\",\n",
+    "        \"function\": {\n",
+    "            \"name\": \"get_daily_stock_performance\",\n",
+    "            \"description\": \"Given a ticker symbol (i.e AAPL) returns the performance of the stock for the last 100 days.\",\n",
+    "            \"parameters\": {\n",
+    "                \"type\": \"object\",\n",
+    "                \"properties\": {\n",
+    "                    \"ticker\": {\n",
+    "                        \"type\": \"string\",\n",
+    "                        \"description\": \"Ticker symbol of the company\",\n",
+    "                    },\n",
+    "                },\n",
+    "                \"required\": [\"ticker\"],\n",
+    "            },\n",
+    "        },\n",
+    "    },\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -17,66 +104,15 @@
     }
    ],
    "source": [
-    "from langchain.agents import initialize_agent, AgentType\n",
-    "from langchain.tools import Tool\n",
-    "from langchain.chat_models import ChatOpenAI\n",
-    "import requests\n",
-    "from bs4 import BeautifulSoup\n",
-    "from duckduckgo_search import DDGS\n",
-    "import wikipedia\n",
+    "from openai import OpenAI\n",
+    "client = OpenAI()\n",
     "\n",
-    "llm = ChatOpenAI(temperature=0.1, model_name=\"gpt-4-1106-preview\")\n",
-    "\n",
-    "def search_wikipedia(query):\n",
-    "    try:\n",
-    "        return wikipedia.summary(query, sentences=3)\n",
-    "    except wikipedia.exceptions.DisambiguationError as e:\n",
-    "        return f\"Disambiguation error: {e.options}\"\n",
-    "    except wikipedia.exceptions.PageError:\n",
-    "        return \"No page found.\"\n",
-    "\n",
-    "def search_duckduckgo(query):\n",
-    "    try:\n",
-    "        with DDGS() as ddgs:\n",
-    "            results = [result['href'] for result in ddgs.text(query, max_results=3)]\n",
-    "        return results\n",
-    "    except Exception as e:\n",
-    "        return [f\"Error fetching search results: {str(e)}\"]\n",
-    "\n",
-    "def scrape_website(url):\n",
-    "    try:\n",
-    "        response = requests.get(url, headers={'User-Agent': 'Mozilla/5.0'})\n",
-    "        soup = BeautifulSoup(response.text, 'html.parser')\n",
-    "        text = ' '.join(p.get_text() for p in soup.find_all('p'))\n",
-    "        return text[:2000]\n",
-    "    except Exception as e:\n",
-    "        return f\"Error scraping {url}: {str(e)}\"\n",
-    "\n",
-    "def save_to_file(content, filename=\"research_result.txt\"):\n",
-    "    with open(filename, \"w\", encoding=\"utf-8\") as file:\n",
-    "        file.write(content)\n",
-    "    return f\"Results saved to {filename}\"\n",
-    "\n",
-    "tools = [\n",
-    "    Tool(name=\"Wikipedia Search\", func=search_wikipedia, description=\"Search Wikipedia for summaries.\"),\n",
-    "    Tool(name=\"DuckDuckGo Search\", func=search_duckduckgo, description=\"Search DuckDuckGo for web results.\"),\n",
-    "    Tool(name=\"Web Scraper\", func=scrape_website, description=\"Scrape a website's text content.\"),\n",
-    "    Tool(name=\"File Saver\", func=save_to_file, description=\"Save research results to a text file.\")\n",
-    "]\n",
-    "\n",
-    "agent = initialize_agent(tools=tools, llm=llm, agent=AgentType.OPENAI_FUNCTIONS, verbose=True)\n",
-    "\n",
-    "query = \"Research about the XZ backdoor\"\n",
-    "wikipedia_result = search_wikipedia(query)\n",
-    "duckduckgo_results = search_duckduckgo(query)\n",
-    "\n",
-    "scraped_content = \"\"\n",
-    "for url in duckduckgo_results:\n",
-    "    scraped_content += scrape_website(url) + \"\\n\\n\"\n",
-    "\n",
-    "research_result = f\"Wikipedia Result:\\n{wikipedia_result}\\n\\nScraped Web Content:\\n{scraped_content}\"\n",
-    "\n",
-    "save_to_file(research_result)\n"
+    "assistant = client.beta.assistants.create(\n",
+    "name=\"Investor Assistant\",\n",
+    "instructions=\"You help users do research on publicly traded companies and you help users decide if they should buy the stock or not.\",\n",
+    "tools=functions,\n",
+    "model=\"gpt-4o\",\n",
+    ")"
    ]
   }
  ],
