--- a/llm_study_1.ipynb
+++ b/llm_study_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,6 +33,14 @@
     "    ticker = inputs[\"ticker\"]\n",
     "    stock = yfinance.Ticker(ticker)\n",
     "    return json.dumps(stock.history(period=\"3mo\").to_json())\n",
+    "\n",
+    "\n",
+    "functions_map = {\n",
+    "    \"get_ticker\": get_ticker,\n",
+    "    \"get_income_statement\": get_income_statement,\n",
+    "    \"get_balance_sheet\": get_balance_sheet,\n",
+    "    \"get_daily_stock_performance\": get_daily_stock_performance,\n",
+    "}\n",
     "\n",
     "\n",
     "functions = [\n",
@@ -109,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,16 +135,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Thread(id='thread_3dl2f2tXud7CrN5AddeSgtjZ', created_at=1740868358, metadata={}, object='thread', tool_resources=ToolResources(code_interpreter=None, file_search=None))"
+       "Thread(id='thread_q3euGLDDudB1jsNCE50qpp0G', created_at=1740872740, metadata={}, object='thread', tool_resources=ToolResources(code_interpreter=None, file_search=None))"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,16 +163,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Run(id='run_BHcYVMKT0GkkbNzhtZaEfKE2', assistant_id='asst_TnpkH7kQb1olKcUf7CIdZYJv', cancelled_at=None, completed_at=None, created_at=1740868360, expires_at=1740868960, failed_at=None, incomplete_details=None, instructions='You help users do research on publicly traded companies and you help users decide if they should buy the stock or not.', last_error=None, max_completion_tokens=None, max_prompt_tokens=None, metadata={}, model='gpt-4o', object='thread.run', parallel_tool_calls=True, required_action=None, response_format='auto', started_at=None, status='queued', thread_id='thread_3dl2f2tXud7CrN5AddeSgtjZ', tool_choice='auto', tools=[FunctionTool(function=FunctionDefinition(name='get_ticker', description='Given the name of a company returns its ticker symbol', parameters={'type': 'object', 'properties': {'company_name': {'type': 'string', 'description': 'The name of the company'}}, 'required': ['company_name']}, strict=False), type='function'), FunctionTool(function=FunctionDefinition(name='get_income_statement', description=\"Given a ticker symbol (i.e AAPL) returns the company's income statement.\", parameters={'type': 'object', 'properties': {'ticker': {'type': 'string', 'description': 'Ticker symbol of the company'}}, 'required': ['ticker']}, strict=False), type='function'), FunctionTool(function=FunctionDefinition(name='get_balance_sheet', description=\"Given a ticker symbol (i.e AAPL) returns the company's balance sheet.\", parameters={'type': 'object', 'properties': {'ticker': {'type': 'string', 'description': 'Ticker symbol of the company'}}, 'required': ['ticker']}, strict=False), type='function'), FunctionTool(function=FunctionDefinition(name='get_daily_stock_performance', description='Given a ticker symbol (i.e AAPL) returns the performance of the stock for the last 100 days.', parameters={'type': 'object', 'properties': {'ticker': {'type': 'string', 'description': 'Ticker symbol of the company'}}, 'required': ['ticker']}, strict=False), type='function')], truncation_strategy=TruncationStrategy(type='auto', last_messages=None), usage=None, temperature=1.0, top_p=1.0, tool_resources={}, reasoning_effort=None)"
+       "Run(id='run_qAShtscBT7ucO6Z5AW8Lwiee', assistant_id='asst_TnpkH7kQb1olKcUf7CIdZYJv', cancelled_at=None, completed_at=None, created_at=1740872741, expires_at=1740873341, failed_at=None, incomplete_details=None, instructions='You help users do research on publicly traded companies and you help users decide if they should buy the stock or not.', last_error=None, max_completion_tokens=None, max_prompt_tokens=None, metadata={}, model='gpt-4o', object='thread.run', parallel_tool_calls=True, required_action=None, response_format='auto', started_at=None, status='queued', thread_id='thread_q3euGLDDudB1jsNCE50qpp0G', tool_choice='auto', tools=[FunctionTool(function=FunctionDefinition(name='get_ticker', description='Given the name of a company returns its ticker symbol', parameters={'type': 'object', 'properties': {'company_name': {'type': 'string', 'description': 'The name of the company'}}, 'required': ['company_name']}, strict=False), type='function'), FunctionTool(function=FunctionDefinition(name='get_income_statement', description=\"Given a ticker symbol (i.e AAPL) returns the company's income statement.\", parameters={'type': 'object', 'properties': {'ticker': {'type': 'string', 'description': 'Ticker symbol of the company'}}, 'required': ['ticker']}, strict=False), type='function'), FunctionTool(function=FunctionDefinition(name='get_balance_sheet', description=\"Given a ticker symbol (i.e AAPL) returns the company's balance sheet.\", parameters={'type': 'object', 'properties': {'ticker': {'type': 'string', 'description': 'Ticker symbol of the company'}}, 'required': ['ticker']}, strict=False), type='function'), FunctionTool(function=FunctionDefinition(name='get_daily_stock_performance', description='Given a ticker symbol (i.e AAPL) returns the performance of the stock for the last 100 days.', parameters={'type': 'object', 'properties': {'ticker': {'type': 'string', 'description': 'Ticker symbol of the company'}}, 'required': ['ticker']}, strict=False), type='function')], truncation_strategy=TruncationStrategy(type='auto', last_messages=None), usage=None, temperature=1.0, top_p=1.0, tool_resources={}, reasoning_effort=None)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,17 +198,68 @@
     "    )\n",
     "\n",
     "\n",
+    "def send_message(thread_id, content):\n",
+    "    return client.beta.threads.messages.create(\n",
+    "        thread_id=thread_id, role=\"user\", content=content\n",
+    "    )\n",
+    "\n",
+    "\n",
     "def get_messages(thread_id):\n",
     "    messages = client.beta.threads.messages.list(thread_id=thread_id)\n",
     "    messages = list(messages)\n",
     "    messages.reverse()\n",
     "    for message in messages:\n",
-    "        print(f\"{message.role}: {message.content[0].text.value}\")"
+    "        print(f\"{message.role}: {message.content[0].text.value}\")\n",
+    "\n",
+    "\n",
+    "def get_tool_outputs(run_id, thread_id):\n",
+    "    run = get_run(run_id, thread_id)\n",
+    "    outputs = []\n",
+    "    for action in run.required_action.submit_tool_outputs.tool_calls:\n",
+    "        action_id = action.id\n",
+    "        function = action.function\n",
+    "        print(f\"Calling function: {function.name} with arg {function.arguments}\")\n",
+    "        outputs.append(\n",
+    "            {\n",
+    "                \"output\": functions_map[function.name](json.loads(function.arguments)),\n",
+    "                \"tool_call_id\": action_id,\n",
+    "            }\n",
+    "        )\n",
+    "    return outputs\n",
+    "\n",
+    "\n",
+    "def submit_tool_outputs(run_id, thread_id):\n",
+    "    outpus = get_tool_outputs(run_id, thread_id)\n",
+    "    return client.beta.threads.runs.submit_tool_outputs(\n",
+    "        run_id=run_id,\n",
+    "        thread_id=thread_id,\n",
+    "        tool_outputs=outpus,\n",
+    "    )"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "submit_tool_outputs(run.id, thread.id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "get_run(run.id, thread.id).status"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "get_messages(thread.id)"
    ]
